fix home page on dark mode (not ideal)

--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 a {
-  color: #363648;
+  color: var(--joy-palette-primary-400);
 }
 
 .showOnChatBubbleHover {
